LDEV-4054: Updating labels
English, Spanish and Greek.

--- a/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 30 15:53:49 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:20:40 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -34,8 +34,8 @@ error.roles.empty  =Necesita asignar por lo menos un rol
 error.userid.invalid  =ID de usuario inv\u00e1lido
 error.firstname.required  =Se require Nombre
 error.lastname.required  =Se require apellido
-error.email.required  =Se require direcci\u00f3n de email
-error.valid.email.required  =Direccion de email no es v\u00e1lida
+error.email.required  =Se require direcci\u00f3n de correo electr\u00f3nico
+error.valid.email.required  =Direccion de correo electr\u00f3nico no es v\u00e1lida
 error.required  =Se requiere {0}
 error.not.unique  ={0} no es unico
 error.roles.invalid  =Uno o mas de los roles son invalidos {0}
@@ -82,7 +82,7 @@ admin.user.day_phone  =Tel\u00e9fono 1
 admin.user.evening_phone  =Tel\u00e9fono 2
 admin.user.mobile_phone  =Movil
 admin.user.fax  =Fax
-admin.user.email  =Email
+admin.user.email  =Correo electr\u00f3nico
 admin.user.roles  =Roles
 admin.user.manage  =Administrar Usuarios
 admin.user.delete  =Borrar Usuario
@@ -400,7 +400,7 @@ admin.servertimezone.dst.offset  =DST offset: {0}
 admin.servertimezone.name  =Name: {0}
 admin.servertimezone.select  =Seleccionar
 config.profile.edit.enable  =Habilitar a los usuarios editar su perfil
-config.profile.partial.edit.enable  =Habilitar a los usuarios editar datos de contacto en su perfil (solamente email y tel\u00e9fonos son editables)
+config.profile.partial.edit.enable  =Habilitar a los usuarios editar datos de contacto en su perfil (solamente correo electr\u00f3nico y tel\u00e9fonos son editables)
 config.header.kaltura  =Configuraci\u00f3n Kaltura
 config.kaltura.server  =URL del servidor Kaltura
 config.kaltura.partner.id  =Partner Id
@@ -528,7 +528,7 @@ admin.org.password.change.force  =Forzar cambio de contrase\u00f1a despu\u00e9s 
 admin.org.password.change.custom  =Ingrese su propia contrase\u00f1a o genere una
 admin.org.password.change.grid.login  =Login
 admin.org.password.change.grid.name  =Nombre
-admin.org.password.change.grid.email  =Email
+admin.org.password.change.grid.email  =Correo electr\u00f3nico
 admin.org.password.change.grid.error.load  =Han ocurrido errores al cargar la informaci\u00f3n
 admin.org.password.change.choose  =Cambiar contrase\u00f1a para
 admin.org.password.change.submit  =Cambiar password
@@ -621,7 +621,7 @@ label.consented.on  =Consentido en
 label.user.consents  =Consentimiento de usuarios
 label.user.full.name  =Nombre
 admin.user.create.date  =Creado en
-admin.email.verify  =\u00bfRequerir verificaci\u00f3n de email?
+admin.email.verify  =\u00bfRequerir verificaci\u00f3n de correo electr\u00f3nico?
 admin.email.verify.desc  =(se enviar\u00e1 un correo electr\u00f3nico de verificaci\u00f3n antes de que el usuario pueda iniciar sesi\u00f3n por primera vez)
 config.smtp.port  =Puerto de SMTP
 config.smtp.auth.security  =Seguridad de autenticaci\u00f3n SMTP
