--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:43:20 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:30:38 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -211,7 +211,6 @@ lesson.required.tasks  =Required tasks
 lesson.task.gate  =Permission gate
 lesson.task.grouping  =Choose grouping
 lesson.task.branching  =Instructor chosen branching
-lesson.task.tool =Tool contribution
 button.task.go  =Go
 button.task.go.tooltip  =Complete this task now
 lesson.monitors  =Monitors
@@ -314,7 +313,7 @@ tour.end.content.2  =For further help, click on the <b>More</b> button below.
 tour.tab.selection.title  =Tab Selection
 tour.tab.selection.content.1  =Monitoring is broken into three areas, accessed by these titles at the top of the page.
 tour.tab.selection.content.2  =<b>Lesson</b> gives the overall lesson details.
-tour.tab.selection.content.3  =<b>Sequence</b> gives an overview of the lesson sequence and is used to access the activities within the lesson.
+tour.tab.selection.content.3  =<b>Sequence</b> gives an overview of the lesson design and is used to access the activities.
 tour.tab.selection.content.4  =<b>Learners</b> shows the details about each learner.
 tour.tab.refresh.content  =Updates the screen.
 tour.lesson.state.content.1  =Click on the current status to change the status. The lesson can be Started, Suspended, Archived or Removed.
@@ -322,8 +321,8 @@ tour.lesson.state.content.2  =<b>Started</b> or Activated lessons are available 
 tour.lesson.state.content.3  =<b>Suspended</b> or Disabled lessons are lessons that have been disabled by a monitor. Learners cannot see but not access disabled lessons. Learners currently in the lesson (with a learner window open) can progress through the lesson.
 tour.lesson.state.content.4  =<b>Archived</b> lessons do not appear on learner's main screen, but are available for Monitors to view.
 tour.lesson.state.content.5  =<b>Removed</b> lessons are removed altogether and cannot be retrieved.
-tour.lesson.count.learners.content.1  =This area shows the number of learners who have started the sequence so far, and the total number of learners who are able to access the sequence.
-tour.lesson.count.learners.content.2  =Note that this does NOT indicate the number of learners online at this moment, but rather how many learners have joined the sequence since it was started.
+tour.lesson.count.learners.content.1  =This area shows the number of learners who have started the lesson so far, and the total number of learners who are able to access it.
+tour.lesson.count.learners.content.2  =Note that this does NOT indicate the number of learners online at this moment, but rather how many learners have joined the lesson since it was started.
 tour.learner.in.class.content  =Display the learners in the class. From the resulting learner list you can email a particular learner.
 tour.edit.class.content  =Add or Remove learners from the lesson.
 tour.email.notifications.content  =Send an email notification to one or more learners. Notifications can be scheduled for later sending.
@@ -332,7 +331,7 @@ tour.lesson.im.content.2  =Once Presence is on, the number of learners online is
 tour.lesson.im.content.3  =Click on Presence and Instant Messaging again to disable.
 tour.lesson.im.content.4  =View the learners' messages using <b>Open IM</b>.
 tour.completion.chart.content  =Graph showing the proportion of learners who have not started the lesson, are in progress or have completed the lesson. Hover over the graph sections to see the percentages.
-tour.tab.sequence.content  =The sequence tab allows you to manage where learners are in the sequence or make changes to the lesson sequence.
+tour.tab.sequence.content  =The sequence tab allows you to manage where learners are in the lesson or make changes to the lesson design.
 tour.activity.content  =Double click on any activity to see the details for that activity.
 tour.move.learners.title  =View and Move Learners
 tour.move.learners.small.content  =If you have a small number of learners in an activity, hover over each person icon in an activity to find the right learner, then click on the learner to open a view of their current activity or click and drag the icon to move them to another activity.
@@ -343,10 +342,10 @@ tour.completed.learners.content  =The completed learners appear at the bottom of
 tour.learner.search.title  =Learner Search
 tour.learner.search.content  =Enter a first name, last name or login to search for a learner.
 tour.live.edit.title  =Live Edit
-tour.live.edit.content  =Change the lesson sequence. You can only change the parts not yet accessed by learners, such as adding new activities later in the sequence.
+tour.live.edit.content  =Change the lesson design. You can only change the parts not yet accessed by learners, such as adding new activities later in the lesson.
 tour.tab.learners.content  =Learners gives a learner by learner view of lesson progression. More learners are available via paging.
 tour.learners.progress.content.1  =Blue circles indicate activities which have been completed by the learner.
-tour.learners.progress.content.2  =Red squares indicate the current position of the learner in the sequence.
+tour.learners.progress.content.2  =Red squares indicate the current position of the learner in the lesson.
 tour.learners.progress.content.3  =Green triangles represent activities not yet reached.
 tour.completion.sorting.title  =Sorting
 tour.completion.sorting.content  =Turn on to sort the completed learners first or turn off to sort alphabetically.
@@ -432,7 +431,7 @@ label.burning.questions  =Burning Qs
 label.forum  =Forum
 label.aes  =AEs
 label.sequence  =Sequence
-label.sequence.diagram  =Sequence diagram
+label.sequence.diagram  =Design
 label.refresh  =Refresh
 label.attendance  =Attendance
 label.users.knocking.on.gate  ={0} users knocking on the gate...
@@ -458,20 +457,19 @@ email.notifications.archived.messages.list.sent.date  =Sent on
 email.notifications.archived.messages.list.sent.count  =Sent to
 email.notifications.archived.messages.list.learners  =learners
 label.gate.gate.open.user  =by {0}
+lesson.end  =End:
+error.lesson.end.date.must.be.after.start.date  =Scheduled end date must be after the start date.
+label.countdown.timer  =Countdown Timer
+label.enter.countdown.time  =Enter countdown time:
+label.start  =Start
+label.countdown.time.left  =Time Left:
+label.stop  =Stop
+label.resume  =Resume
+label.hours  =Hours
+label.minutes  =Minutes
+label.seconds  =Seconds
+label.reset  =Reset
+label.time.is.expired  =Time has expired.
 
-label.countdown.timer=Countdown Timer
-label.enter.countdown.time=Enter countdown time:
-label.start=Start
-label.countdown.time.left=Time Left:
-label.stop=Stop
-label.resume=Resume
-label.hours=Hours
-label.minutes=Minutes
-label.seconds=Seconds
-label.reset=Reset
-label.time.is.expired=Time has expired.
 
-lesson.end=End:
-error.lesson.end.date.must.be.after.start.date=Scheduled end date must be after the start date.
-
-#======= End labels: Exported 451 labels for en AU =====
+#======= End labels: Exported 464 labels for en AU =====
