--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:45:31 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:33:40 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -245,6 +245,7 @@ label.authoring.advance.enable.anonymous.posts  =Enable anonymous posts
 label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
+label.marks.released  =Marks have been released
 
 
-#======= End labels: Exported 239 labels for en AU =====
+#======= End labels: Exported 240 labels for en AU =====
