--- a/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:33:12 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:33:41 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -32,17 +32,13 @@ lable.topic.subject.by  =\u0391\u03c0\u03cc
 label.back.to.forum  =\u03a0\u03af\u03c3\u03c9 \u03c3\u03c4\u03b7\u03bd \u0391\u03c1\u03c7\u03ae \u03c4\u03b7\u03c2 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2
 lable.topic.title.message.number  =# \u03b1\u03c0\u03cc \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03b1
 lable.topic.title.average.mark  =\u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd
-page.title.monitoring.content.userlist  =\u03a3\u03cd\u03bd\u03bf\u03c8\u03b7
 page.title.monitoring.view.user.mark  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
 page.title.monitoring.edit.user.mark  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03b2\u03b1\u03b8\u03bc\u03bf\u03cd \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
-page.title.monitoring.view.activity  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 page.title.monitoring.edit.activity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1  \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 page.title.monitoring.view.instructions  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd
 page.title.monitoring.view.topic  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03b8\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2
 page.title.monitoring.statistic  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
-page.title.monitoring.definelater  =\u039f\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2 \u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf\u03c5 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2 (Forum)
 label.monitoring.edit.activity.cancel  =\u0386\u03ba\u03c5\u03c1\u03bf
-label.monitoring.edit.activity.update  =\u0395\u03bd\u03b7\u03bc\u03ad\u03c1\u03c9\u03c3\u03b7
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 label.monitoring.statistic.average.mark  =\u039c\u03ad\u03c3\u03bf\u03c2 \u03cc\u03c1\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1\u03c2
 lable.monitoring.statistic.total.message  =# \u03b1\u03c0\u03cc \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf \u03bc\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd
@@ -50,14 +46,10 @@ error.valueReqd  =\u0391\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \
 error.mark.needNumber  =\u039f \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03bd\u03b1\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2
 error.mark.invalid.number  =\u039f \u03b2\u03b1\u03b8\u03bc\u03cc\u03c2 \u03ad\u03c7\u03b5\u03b9  \u03c3\u03b5 \u03bc\u03ae \u03ad\u03b3\u03ba\u03c5\u03c1\u03b7 \u03b1\u03c1\u03b9\u03b8\u03bc\u03b7\u03c4\u03b9\u03ba\u03ae \u03bc\u03bf\u03c1\u03c6\u03ae
 error.title.empty  =\u039f \u03a4\u03af\u03c4\u03bb\u03bf\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc\u03c2
-title.messageTopic.open  =\u039b\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2 \u0398\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2
 title.message.add  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2
 title.message.open  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2
 title.message.reply  =\u0391\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7 \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2
 title.message.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0398\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2
-title.message.view  =\u03a0\u03af\u03bd\u03b1\u03ba\u03b1\u03c2 \u039c\u03b7\u03bd\u03c5\u03bc\u03ac\u03c4\u03c9\u03bd
-title.message.view.topic  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2
-title.message.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u039c\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2
 message.label.subject  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2 \u0398\u03ad\u03bc\u03b1\u03c4\u03bf\u03c2:
 message.label.body  =\u03a3\u03ce\u03bc\u03b1
 message.label.attachment  =\u0395\u03c0\u03b9\u03c3\u03c5\u03bd\u03b1\u03c0\u03c4\u03cc\u03bc\u03b5\u03bd\u03bf
@@ -253,6 +245,7 @@ label.authoring.advance.enable.anonymous.posts  =\u0395\u03bd\u03b5\u03c1\u03b3\
 label.post.anonomously  =\u0391\u03bd\u03ce\u03bd\u03c5\u03bc\u03b7 \u03b4\u03b7\u03bc\u03bf\u03c3\u03af\u03b5\u03c5\u03c3\u03b7
 label.anonymous  =\u0391\u03bd\u03ce\u03bd\u03c5\u03bc\u03b1
 label.anonymous.tooltip  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 \u03c4\u03b7\u03bd "\u0391\u03bd\u03ce\u03bd\u03c5\u03bc\u03b7 \u03b4\u03b7\u03bc\u03bf\u03c3\u03af\u03b5\u03c5\u03c3\u03b7" \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b1\u03c0\u03bf\u03ba\u03c1\u03cd\u03c8\u03b5\u03c4\u03b5 \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03ac \u03c3\u03b1\u03c2 \u03b1\u03c0\u03cc \u03ac\u03bb\u03bb\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2. \u039f\u03b9 \u0395\u03c0\u03cc\u03c0\u03c4\u03b5\u03c2/\u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03ad\u03c2 \u03b8\u03b1 \u03b5\u03be\u03b1\u03ba\u03bf\u03bb\u03bf\u03c5\u03b8\u03ae\u03c3\u03bf\u03c5\u03bd \u03bd\u03b1 \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03b2\u03bb\u03ad\u03c0\u03bf\u03c5\u03bd \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03ac \u03c3\u03b1\u03c2 - \u03c0\u03bf\u03b9\u03bf\u03b9 \u03ba\u03ac\u03bd\u03bf\u03c5\u03bd \u03c4\u03b9\u03c2 \u03b1\u03bd\u03b1\u03c1\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2.
+label.marks.released  =\u039f\u03b9 \u03b2\u03b1\u03b8\u03bc\u03bf\u03af \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03bd\u03b1\u03ba\u03bf\u03b9\u03bd\u03c9\u03b8\u03b5\u03af
 
 
-#======= End labels: Exported 247 labels for el GR =====
+#======= End labels: Exported 240 labels for el GR =====
