--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:45:32 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:33:40 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -245,6 +245,7 @@ label.authoring.advance.enable.anonymous.posts  =Habilitar mensajes an\u00f3nimo
 label.post.anonomously  =Publicar an\u00f3nimamente
 label.anonymous  =Anonimo
 label.anonymous.tooltip  =Seleccione "Publicar an\u00f3nimamente" si quiere esconder su nombre a otros estudiantes. El instructor a\u00fan podr\u00e1 ver su nombre.
+label.marks.released  =Las evaluaciones han sido publicadas
 
 
-#======= End labels: Exported 239 labels for es ES =====
+#======= End labels: Exported 240 labels for es ES =====
