--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Apr 05 20:09:29 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:32:00 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -35,7 +35,6 @@ label.learner.time  =\u03a7\u03c1\u03cc\u03bd\u03bf\u03c2 \u0391\u03bd\u03b5\u03
 label.learner.dateOfSubmission  =\u0397\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1 \u03a5\u03c0\u03bf\u03b2\u03bf\u03bb\u03ae\u03c2
 label.learner.comments  =\u03a3\u03c7\u03cc\u03bb\u03b9\u03b1
 label.learner.marks  =\u0392\u03b1\u03b8\u03bc\u03bf\u03af
-label.learner.dateMarksReleased  =\u0397\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1  \u0391\u03bd\u03b1\u03ba\u03bf\u03af\u03bd\u03c9\u03c3\u03b7\u03c2 \u0392\u03b1\u03b8\u03bc\u03ce\u03bd
 label.learner.notAvailable  =\u039c\u03b7 \u0394\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03bf
 label.learner.noUpload  =\u039a\u03b1\u03bd\u03ad\u03bd\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03c5\u03c0\u03bf\u03b2\u03bb\u03b7\u03b8\u03b5\u03af \u03b1\u03ba\u03cc\u03bc\u03b7.
 label.learner.uploadMessage  =\u039c\u03cc\u03bd\u03bf \u03ad\u03bd \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b1\u03c0\u03bf\u03c3\u03c4\u03b1\u03bb\u03b5\u03af \u03ba\u03ac\u03b8\u03b5 \u03c6\u03bf\u03c1\u03ac. - \u039c\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03b5\u03af\u03bd\u03b1\u03b9 1.0 MB
@@ -62,7 +61,6 @@ label.monitoring.saveMarks.button  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u
 label.monitoring.finishedMarks.button  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.monitoring.edit.activity.cancel  =\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7 \u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1\u03c2
-label.monitoring.edit.activity.update  =\u0395\u03bd\u03b7\u03bc\u03ad\u03c1\u03c9\u03c3\u03b7 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 monitoring.statistic.title  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03b5\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1
 monitoring.statistic.marked  =\u0392\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03b7\u03bc\u03ad\u03bd\u03b1 \u0391\u03c1\u03c7\u03b5\u03af\u03b1
 monitoring.statistic.not.marked  =\u039c\u03b7 \u0392\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03b7\u03bc\u03ad\u03bd\u03b1 \u0391\u03c1\u03c7\u03b5\u03af\u03b1
@@ -163,6 +161,7 @@ label.waiting.for.leader.finish  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03
 label.select.leader  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae
 label.waiting.for.leader.launch.time.limit  =\u039f \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03b4\u03b5\u03bd \u03be\u03b5\u03ba\u03af\u03bd\u03b7\u03c3\u03b5 \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1. \u03a0\u03b1\u03c1\u03b1\u03b1\u03ba\u03b1\u03bb\u03ce, \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03bc\u03ad\u03c7\u03c1\u03b9 \u03bd\u03b1 \u03b1\u03c1\u03c7\u03af\u03c3\u03b5\u03b9 \u03bf \u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2.
 label.use.select.leader.tool.output  =\u03a7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 - \u03b5\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03c3\u03b9\u03c4\u03ad\u03c2 \u03b1\u03c0\u03cc \u03c4\u03bf \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2
+label.marks.released  =\u039f\u03b9 \u03b2\u03b1\u03b8\u03bc\u03bf\u03af \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03bd\u03b1\u03ba\u03bf\u03b9\u03bd\u03c9\u03b8\u03b5\u03af
 
 
-#======= End labels: Exported 157 labels for el GR =====
+#======= End labels: Exported 156 labels for el GR =====
