--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:50 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:31:58 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -35,7 +35,6 @@ label.learner.time  =Tiempo de Envio
 label.learner.dateOfSubmission  =Fecha de Envio
 label.learner.comments  =Comentarios
 label.learner.marks  =Evaluaciones
-label.learner.dateMarksReleased  =Fecha de Envio de Evaluaciones
 label.learner.notAvailable  =No se encuentra disponible
 label.learner.noUpload  =Ning\u00fan archivo ha sido enviado
 label.learner.uploadMessage  =Solo un archivo se puede enviar por ves. El tama\u00f1o m\u00e1ximo del archivo es de 1.0 MB
@@ -162,6 +161,7 @@ label.waiting.for.leader.finish  =Espere hasta que el l\u00edder del grupo termi
 label.select.leader  =Selecci\u00f3n del l\u00edder
 label.waiting.for.leader.launch.time.limit  =L\u00edder no ha comenzado la actividad. Por favor, espere hasta que el l\u00edder comience.
 label.use.select.leader.tool.output  =Utilizar l\u00edderes
+label.marks.released  =Las evaluaciones han sido publicadas
 
 
 #======= End labels: Exported 156 labels for es ES =====
