--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:00:34 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:18:56 CST 2018 
  
 #=================== labels for Scratchie =================# 
 
@@ -200,7 +200,7 @@ label.waiting.for.leader.submit.notebook  =El l\u00edmite de tiempo establecido 
 label.authoring.advanced.shuffle.items  =Barajar preguntas
 label.summary.downloaded  =Archivo de Excel descargado
 label.number.groups.finished  =Grupos que han terminado
-label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de marcas.
+label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de puntajes.
 label.lowest.mark  =Puntaje m\u00e1s bajo:
 label.highest.mark  =Puntaje m\u00e1s alto:
 label.marks  =Puntaje
@@ -223,6 +223,9 @@ label.average  =promedio
 label.print  =Imprimir
 label.teams.notuppercase  =Equipos
 label.authoring.advanced.show.scratchies.in.results  =Mostrar puntajes y resultados despu\u00e9s de completar actividad
+label.scroll.down.to.burning.question  =Despl\u00e1cese hacia abajo a la pregunta de grabaci\u00f3n correspondiente
+label.expand.all  =Expandir
+label.collapse.all  =Contraer
 
 
-#======= End labels: Exported 217 labels for es ES =====
+#======= End labels: Exported 220 labels for es ES =====
