--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = wiki
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:55:30 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:20:11 CST 2018 
  
 #=================== labels for Wiki =================# 
 
@@ -128,7 +128,7 @@ notify.pageAdded.body  =Una p\u00e1gina del Wiki ha sido agregada por {0} de {1}
 notify.pageRemoved.body  =Una p\u00e1gina del Wiki ha sido borrada por {0} de {1}. Para ver el Wiki vaya a {2}
 notify.learner.subscribe  =Subscribir
 notify.learner.unsubscribe  =Dessubscribir
-notify.learner.query  ={0} para notificaciones por email cada vez que se edite una p\u00e1gina del Wiki.
+notify.learner.query  ={0} para notificaciones por correo electr\u00f3nico cada vez que se edite una p\u00e1gina del Wiki.
 label.wiki.restore  =Restaurar
 label.wiki.restore.toolTip  =Restaurar p\u00e1gina previamente eliminada
 notify.pageRestored.subject  =Wiki ha sido restaurada por {0}.
