--- a/lams_learning/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:51:13 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:31:20 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -182,6 +182,9 @@ message.kumalive.poll.release.voters.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u
 label.kumalive.poll.missing.voters  =\u0394\u03b5\u03bd \u03c8\u03b7\u03c6\u03af\u03c3\u03c4\u03b7\u03ba\u03b5
 label.kumalive.poll.results  =\u0391\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1
 label.kumalive.poll.votes.total  =\u03a3\u03cd\u03bd\u03bf\u03bb\u03bf \u03c8\u03ae\u03c6\u03c9\u03bd
+audit.activity.started  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 {0} ({1}) \u03be\u03b5\u03ba\u03af\u03bd\u03b7\u03c3\u03b5 \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 {2} ({3})
+audit.activity.stopped  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 {0} ({1}) \u03c3\u03c4\u03b1\u03bc\u03ac\u03c4\u03b7\u03c3\u03b5 \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 {2} ({3})
+audit.learner.lesson.complete  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 {0} ({1}) \u03bf\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b5 \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 {2} ({3})
 
 
-#======= End labels: Exported 176 labels for el GR =====
+#======= End labels: Exported 179 labels for el GR =====
