--- a/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:43:22 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:22:06 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -457,6 +457,8 @@ email.notifications.archived.messages.list.sent.date  =\u03a3\u03c4\u03ac\u03bb\
 email.notifications.archived.messages.list.sent.count  =\u0391\u03c0\u03bf\u03c3\u03c4\u03ad\u03bb\u03bb\u03bf\u03bd\u03c4\u03b1\u03b9 \u03c3\u03b5
 email.notifications.archived.messages.list.learners  =\u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9
 label.gate.gate.open.user  =\u03b1\u03c0\u03cc {0}
+lesson.end  =\u03a4\u03ad\u03bb\u03bf\u03c2:
+error.lesson.end.date.must.be.after.start.date  =\u0397 \u03c0\u03c1\u03bf\u03b3\u03c1\u03b1\u03bc\u03bc\u03b1\u03c4\u03b9\u03c3\u03bc\u03ad\u03bd\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1 \u03bb\u03ae\u03be\u03b7\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03b5\u03c4\u03ac \u03c4\u03b7\u03bd \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1 \u03ad\u03bd\u03b1\u03c1\u03be\u03b7\u03c2.
 
 
-#======= End labels: Exported 451 labels for el GR =====
+#======= End labels: Exported 453 labels for el GR =====
