--- a/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:42:24 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:30:37 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -160,7 +160,7 @@ email.notifications.by.this.date  =Para esta fecha:
 email.notifications.emails.successfully.scheduled  =Los correos electr\u00f3nicos han sido exitosamente programados para ser enviado en la fecha especificada.
 email.notifications.scheduled.messages.list  =Lista de e-mails programados
 email.notifications.scheduled.messages.list.scheduled.date  =Fecha prevista
-email.notifications.scheduled.messages.list.email.body  =Cuerpo del mensaje (email)
+email.notifications.scheduled.messages.list.email.body  =Cuerpo del mensaje (correo electr\u00f3nico)
 email.notifications.scheduled.messages.list.notify.sudents.that  =Notificar a los estudiantes que
 email.notifications.scheduled.messages.list.back  =Volver a notificaciones
 email.notifications.table.now  =Ahora
@@ -180,7 +180,7 @@ email.notifications.course.email.body.msg  =[Poner el mensaje aqu\u00ed]
 advanced.tab.enable.lesson.intro  =Habilitar introducci\u00f3n de la lecci\u00f3n
 advanced.tab.display.design.image  =Muestra la imagen de dise\u00f1o
 email.notifications  =Notificaciones
-button.email  =Email
+button.email  =Correo electr\u00f3nico
 lesson.name  =Nombre:
 lesson.description  =Descripci\u00f3n:
 lesson.state  =Estado:
@@ -303,7 +303,7 @@ class.add.all.success  =Todos los estudiantes han sido agregados a la lecci\u00f
 button.edit.class.add.all  =Agregar a todos
 force.complete.learner.command.message  =El instructor le ha movido a otra actividad.
 index.emailnotifications  =Comunicaciones
-label.email  =Email
+label.email  =Correo electr\u00f3nico
 lesson.chart.not.completed  =Sin finalizar
 tour.intro.title  =Tutorial de Seguimiento
 tour.intro.content  =Este breve recorrido le mostrar\u00e1 las caracter\u00edsticas de la interfaz de seguimiento de LAMS. Puede detener el recorrido en cualquier momento haciendo clic en Finalizar y reiniciarlo nuevamente haciendo clic en el bot\u00f3n Tutorial.
@@ -350,7 +350,7 @@ tour.learners.progress.content.3  =Los tri\u00e1ngulos verdes representan activi
 tour.completion.sorting.title  =Ordenar
 tour.completion.sorting.content  =Active para ordenar en funci\u00f3n del finalizaci\u00f3n o desactive para ordenar alfab\u00e9ticamente.
 tour.journal.entries.content  =Ver las entradas en el diario del estudiante.
-tour.email.content  =Enviar email a estudiante en particular
+tour.email.content  =Enviar correo electr\u00f3nico a estudiante en particular
 tour.this.is.disabled  =Esta funci\u00f3n no est\u00e1 disponible durante el tutorial
 tour.prev  =Ant
 tour.next  =Sig
@@ -452,11 +452,24 @@ email.notifications.archived.export.sheet.name  =Notificaci\u00f3n
 email.notifications.message.header  =Mensaje:
 email.notifications.scheduled.messages.button  =Programado
 email.notifications.archived.messages.button  =Enviados
-email.notifications.archived.messages.list  =Lista de emails ya enviados
+email.notifications.archived.messages.list  =Lista de correo electr\u00f3nicos ya enviados
 email.notifications.archived.messages.list.sent.date  =Enviado en
 email.notifications.archived.messages.list.sent.count  =Enviado a
 email.notifications.archived.messages.list.learners  =Estudiantes
 label.gate.gate.open.user  =por {0}
+lesson.end  =Fin:
+error.lesson.end.date.must.be.after.start.date  =La fecha de finalizaci\u00f3n programada debe ser posterior a la fecha de inicio.
+label.countdown.timer  =Contador regresivo
+label.enter.countdown.time  =Ingrese el tiempo de cuenta regresiva:
+label.start  =Comenzar
+label.countdown.time.left  =Tiempo restante
+label.stop  =Finalizar
+label.resume  =Continuar
+label.hours  =Horas
+label.minutes  =Minutos
+label.seconds  =Segundos
+label.reset  =Reiniciar
+label.time.is.expired  =El tiempo ha finalizado
 
 
-#======= End labels: Exported 451 labels for es ES =====
+#======= End labels: Exported 464 labels for es ES =====
