--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:53:19 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:21:26 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -106,7 +106,7 @@ monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 output.desc.all.users.entries.definition.notebook  =Cada entrade del estudiante
 button.submit  =Finalizar
 message.monitoring.summary.no.session  =Sin informaci\u00f3n disponible.
-label.notify.learner  =Enviar email con comentario al estudiante
+label.notify.learner  =Enviar correo electr\u00f3nico con comentario al estudiante
 event.teacher.comment.subject  =El instructor ha dejado un comentario.
 event.teacher.comment.body  =Comentario:  {0}
 label.click.to.edit  =Editar
