LDEV-4638 Option to turn on confidence levels for iRA tRA

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -840,11 +840,11 @@ authoring.error.application.exercise.must.have.100.percent=Application Exercise 
 authoring.error.application.exercise.not.blank.and.grade=Application Exercise {0} may not be blank and must have a grade.	
 authoring.label.grade=Grade	
 authoring.label.none=None	
-	
+authoring.enable.confidence.levels=Enable confidence levels
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
 authoring.tbl.template.description=Individual and Team Readiness Assessments followed by Application Exercises.	
-authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
+authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions. Turn on "Enable confidence levels" to have the learners' confidence levels from the iRA shown on the tRA screen.
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
 
