--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -844,7 +844,7 @@ authoring.label.none=None
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
 authoring.tbl.template.description=Individual and Team Readiness Assessments followed by Application Exercises.	
-authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
+authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions. Turn on "Enable confidence levels" to have the learners' confidence levels from the iRA shown on the tRA screen.
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
 
