--- a/lams_tool_nb/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources.properties
@@ -61,6 +61,8 @@ advanced.comments.like.and.dislike  =Like and dislike options
 advanced.comment.header  =Comments options
 label.activity.completion  =End of activity
 advanced.enable.anonymous.posts =Enable anonymous posts
-
-
+advanced.outcome.title =Learning outcomes
+advanced.outcome.input =Add outcomes by name or code
+advanced.outcome.existing =Added outcomes
+advanced.outcome.existing.none =none
 #======= End labels: Exported 54 labels for en AU =====
