--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -37,6 +37,7 @@ gradebook.columntitle.averageMark  =Average mark
 gradebook.columntitle.learnerName  =Name
 gradebook.columntitle.attempt =Attempt #
 gradebook.columntitle.lesson.mark =Lesson mark
+gradebook.columntitle.attempts =Previous attempts
 gradebook.function.window.showColumns  =Show/Hide columns
 gradebook.function.error.enterNumber  =Please enter a number value
 gradebook.function.search.title  =Search grid
