LDEV-4644 Display and edit outcome results in monitor gradebook

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -38,6 +38,7 @@ gradebook.columntitle.learnerName  =Name
 gradebook.columntitle.attempt =Attempt #
 gradebook.columntitle.restart =Restart date
 gradebook.columntitle.lesson.mark =Lesson mark
+gradebook.columntitle.outcome =Learning outcomes
 gradebook.function.window.showColumns  =Show/Hide columns
 gradebook.function.error.enterNumber  =Please enter a number value
 gradebook.function.search.title  =Search grid
@@ -125,4 +126,6 @@ outcome.authoring.title =Learning outcomes
 outcome.authoring.input =Search and select by outcome name or code
 outcome.authoring.existing =Added outcomes
 outcome.authoring.existing.none =none
+outcome.result.not.set =not set
+outcome.result.error =Error!
 #======= End labels: Exported 112 labels for en AU =====
