--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -626,6 +626,12 @@ admin.email.verify.desc  =(a verification email will be send before user can log
 config.smtp.port  =SMTP port
 config.smtp.auth.security  =SMTP authentication security
 config.server.country  =Country
-
-
+sysadmin.lesson.gradebook.complete  =Display activity scores on completion
+sysadmin.lesson.liveedit  =Enable Live Edit
+sysadmin.lesson.notification  =Enable lesson notifications
+sysadmin.lesson.presence  =Allow learners to see who is online
+sysadmin.lesson.im  =Enable Instant Messaging
+sysadmin.lesson.force.restart  =Learners always start from the first activity
+sysadmin.lesson.allow.restart  =Learners can restart the lesson
+sysadmin.lesson.default =Lesson default settings
 #======= End labels: Exported 620 labels for en AU =====
