LDEV-4649 Outcome scale export

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -878,6 +878,8 @@ outcome.authoring.title =Learning outcomes
 outcome.authoring.input =Search and select by outcome name or code
 outcome.authoring.existing =Added outcomes
 outcome.authoring.existing.none =none
+outcome.export.date =Exported on:
+outcome.export =Export
 authoring.enable.confidence.levels=Enable confidence levels
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
