LDEV-4649 Scale import

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -869,6 +869,7 @@ scale.manage.edit =Edit scale
 scale.manage.view =View scale
 scale.manage.title =Course scales
 scale.manage.remove =Remove scale
+scale.manage.remove.scale =Error while removing a scale. It is probably used in some outcomes.
 scale.manage.remove.confirm =Are you sure you want to remove this scale?
 scale.manage.add.value =Values
 scale.manage.add.value.info =Enter comma separated values in increasing order of value. For example, an A,B,C,D scale must be entered as D,C,B,A.
@@ -880,6 +881,8 @@ outcome.authoring.existing =Added outcomes
 outcome.authoring.existing.none =none
 outcome.export.date =Exported on:
 outcome.export =Export
+outcome.import =Import
+outcome.import.error =Error while importing outcomes or scales. Check logs.
 authoring.enable.confidence.levels=Enable confidence levels
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
