LDEV-4599 Display a button for iPad as Zoom iframe does not open

--- a/lams_tool_zoom/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_zoom/conf/language/lams/ApplicationResources.properties
@@ -24,6 +24,7 @@ button.summary  =Summary
 button.editActivity  =Edit Activity
 button.statistics  =Statistics
 button.close  =Close
+button.enter =Enter Zoom meeting
 label.authoring.basic.title  =Title
 label.view  =View
 label.notAvailable  =Not available
